# themis

./: .gitignore  README.md  notes.md
anon-zether/: client.js  index.js
aztec/: README.md  demo.js  truffle-config.js
aztec/measurements-setup/: .env  .gitignore  README.md  ganache.config.js  package.json  truffle-config.js
aztec/old_measurements/: ganache.config.js
aztec/results/: 200payments.csv  400payments.csv  800payments.csv  80payments.csv
contracts/contracts/: Escrow.sol  Payment.sol  verifier.sol
contracts/ops/: Makefile  deploy.js  deploy_verifier.js  package-lock.json  package.json  zether.js
contracts/zether-contracts/: Payment.sol
elgamal-solidity/: README.md  data.js  elgamal_client.js  elgamal_deploy_contract.js  index.js  linking_proof_client.js  package-lock.json  package.json
elgamal-solidity/solidity/: elgamal.sol
linking-proof/: 1_initial_migration.js  Linking.sol  index.js  input1.js  input32.js
linking-proof/contracts/: Linking32.sol
netstats/: app.json  package-lock.json
pantheon-network/: docker-compose.yml
plots/: anonzether-measurements.py  stacked-measurements.py
quorum-network/: docker-compose.yml
themis/: notes.md  truffle-config.js
themis-client-rs/: .gitignore  10x128ads_measurements.results  50_calculate_e2e.results  50_calculate_fetch.results  50_calculate_fetch_recover.results  Cargo.toml  README.md  parallel_benches.sh  result
themis-client-rs/benches/: client-computation.rs  e2e-benchmarks.rs
themis-client-rs/ec2-user/: .bash_profile
themis-client-rs/ec2-user/.ssh/: authorized_keys
themis-client-rs/examples/: compute_aggregate.rs  e2e-benchmark-proof.rs  e2e-benchmark.rs  full-e2e-benchmark.rs  proof_correct_decryption.rs  reward-request-benchmark.rs
themis-client-rs/ffi/: BUCK  Cargo.toml  build.rs
themis-client-rs/ffi/cpp/: BUCK  BUILD  ffi.cc  header.h
themis-client-rs/ffi/src/: main.rs
themis-client-rs/src/: errors.rs  lib.rs  main.rs  rpc.rs  utils.rs
themis-client-rs/tests/: ThemisPolicyContract_Test.abi  integration_tests.rs
themis-policy-contract/: truffle-config.js
(+105 files in other folders)
