[package]
name = "themis_client"
version = "0.1.0"
authors = ["gpestana <g6pestana@gmail.com>, Genysys<samuel.b.dare@gmail.com>"]
edition = "2018"

[dependencies]
web3 = "0.10.0"
ethabi = "12.0.0"
elgamal_bn = { git = "https://github.com/brave-experiments/elgamal_bn" }
bn = {git = "https://github.com/paritytech/bn"}
rand = {version = "0.5", default-features = true}
hex = "0.4.2"
sha2 = "0.8.1"
serde_json = "1.0.41"
rustc-hex = "2.1.0"
curve25519-dalek = "2.0.0"

[dev-dependencies]
criterion = "0.3"

#[[bench]]
#name = "e2e-benchmarks"
#path = "./benches/e2e-benchmarks.rs"
#harness = false

[[bench]]
name = "client-computation"
path = "./benches/client-computation.rs"
harness = false
